--- a/package.json
+++ b/package.json
@@ -34,5 +34,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
+    "bootstrap": "^4.5.3",
+    "eslint": "^7.13.0",
+    "react-bootstrap": "^1.4.0"
   }
 }
